// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCardForm component should renders correctly in mailingAddress view 1`] = `
<ScrollViewMock
  addressLabels={Object {}}
  addressList={
    Immutable.List [
      Object {
        "addressId": "12345",
        "firstName": "test",
        "lastName": "test",
        "primary": "true",
      },
    ]
  }
  className=""
  dispatch={[MockFunction]}
  dto={Object {}}
  expMonthOptionsMap={
    Array [
      Object {
        "displayName": "01 (Jan.)",
        "id": "1",
        "label": "01 (Jan.)",
        "value": "1",
      },
      Object {
        "displayName": "02 (Feb.)",
        "id": "2",
        "label": "02 (Feb.)",
        "value": "2",
      },
      Object {
        "displayName": "03 (Mar.)",
        "id": "3",
        "label": "03 (Mar.)",
        "value": "3",
      },
      Object {
        "displayName": "04 (Apr.)",
        "id": "4",
        "label": "04 (Apr.)",
        "value": "4",
      },
      Object {
        "displayName": "05 (May.)",
        "id": "5",
        "label": "05 (May.)",
        "value": "5",
      },
      Object {
        "displayName": "06 (Jun.)",
        "id": "6",
        "label": "06 (Jun.)",
        "value": "6",
      },
      Object {
        "displayName": "07 (Jul.)",
        "id": "7",
        "label": "07 (Jul.)",
        "value": "7",
      },
      Object {
        "displayName": "08 (Aug.)",
        "id": "8",
        "label": "08 (Aug.)",
        "value": "8",
      },
      Object {
        "displayName": "09 (Sep.)",
        "id": "9",
        "label": "09 (Sep.)",
        "value": "9",
      },
      Object {
        "displayName": "10 (Oct.)",
        "id": "10",
        "label": "10 (Oct.)",
        "value": "10",
      },
      Object {
        "displayName": "11 (Nov.)",
        "id": "11",
        "label": "11 (Nov.)",
        "value": "11",
      },
      Object {
        "displayName": "12 (Dec.)",
        "id": "12",
        "label": "12 (Dec.)",
        "value": "12",
      },
    ]
  }
  expYearOptionsMap={
    Array [
      Object {
        "displayName": "2019",
        "id": "2019",
        "label": "2019",
        "value": "2019",
      },
      Object {
        "displayName": "2020",
        "id": "2020",
        "label": "2020",
        "value": "2020",
      },
      Object {
        "displayName": "2021",
        "id": "2021",
        "label": "2021",
        "value": "2021",
      },
      Object {
        "displayName": "2022",
        "id": "2022",
        "label": "2022",
        "value": "2022",
      },
      Object {
        "displayName": "2023",
        "id": "2023",
        "label": "2023",
        "value": "2023",
      },
      Object {
        "displayName": "2024",
        "id": "2024",
        "label": "2024",
        "value": "2024",
      },
      Object {
        "displayName": "2025",
        "id": "2025",
        "label": "2025",
        "value": "2025",
      },
      Object {
        "displayName": "2026",
        "id": "2026",
        "label": "2026",
        "value": "2026",
      },
      Object {
        "displayName": "2027",
        "id": "2027",
        "label": "2027",
        "value": "2027",
      },
      Object {
        "displayName": "2028",
        "id": "2028",
        "label": "2028",
        "value": "2028",
      },
      Object {
        "displayName": "2029",
        "id": "2029",
        "label": "2029",
        "value": "2029",
      },
    ]
  }
  handleSubmit={[MockFunction]}
  initialValues={Object {}}
  isEdit={false}
  keyboardShouldPersistTaps="handled"
  labels={
    Object {
      "common": Object {},
      "paymentGC": Object {},
    }
  }
  mailingAddress={true}
  onFileAddressKey=""
  pristine={true}
  selectedCard={null}
  showCreditCardFields={true}
  showEmailAddress={true}
  showUserName={true}
  showsVerticalScrollIndicator={false}
  subHeading={null}
>
  <Styled(View)>
    <CreditCardFields
      addressLabels={Object {}}
      addressList={
        Immutable.List [
          Object {
            "addressId": "12345",
            "firstName": "test",
            "lastName": "test",
            "primary": "true",
          },
        ]
      }
      cameraIcon={false}
      cardType=""
      cardTypeImgUrl=""
      className=""
      creditFieldLabels={
        Object {
          "creditCardNumber": "lbl_payment_cardNumber",
          "expMonth": "lbl_payment_expMonth",
          "expYear": "lbl_payment_expYear",
        }
      }
      dispatch={[MockFunction]}
      dto={Object {}}
      expMonthOptionsMap={
        Array [
          Object {
            "displayName": "01 (Jan.)",
            "id": "1",
            "label": "01 (Jan.)",
            "value": "1",
          },
          Object {
            "displayName": "02 (Feb.)",
            "id": "2",
            "label": "02 (Feb.)",
            "value": "2",
          },
          Object {
            "displayName": "03 (Mar.)",
            "id": "3",
            "label": "03 (Mar.)",
            "value": "3",
          },
          Object {
            "displayName": "04 (Apr.)",
            "id": "4",
            "label": "04 (Apr.)",
            "value": "4",
          },
          Object {
            "displayName": "05 (May.)",
            "id": "5",
            "label": "05 (May.)",
            "value": "5",
          },
          Object {
            "displayName": "06 (Jun.)",
            "id": "6",
            "label": "06 (Jun.)",
            "value": "6",
          },
          Object {
            "displayName": "07 (Jul.)",
            "id": "7",
            "label": "07 (Jul.)",
            "value": "7",
          },
          Object {
            "displayName": "08 (Aug.)",
            "id": "8",
            "label": "08 (Aug.)",
            "value": "8",
          },
          Object {
            "displayName": "09 (Sep.)",
            "id": "9",
            "label": "09 (Sep.)",
            "value": "9",
          },
          Object {
            "displayName": "10 (Oct.)",
            "id": "10",
            "label": "10 (Oct.)",
            "value": "10",
          },
          Object {
            "displayName": "11 (Nov.)",
            "id": "11",
            "label": "11 (Nov.)",
            "value": "11",
          },
          Object {
            "displayName": "12 (Dec.)",
            "id": "12",
            "label": "12 (Dec.)",
            "value": "12",
          },
        ]
      }
      expYearOptionsMap={
        Array [
          Object {
            "displayName": "2019",
            "id": "2019",
            "label": "2019",
            "value": "2019",
          },
          Object {
            "displayName": "2020",
            "id": "2020",
            "label": "2020",
            "value": "2020",
          },
          Object {
            "displayName": "2021",
            "id": "2021",
            "label": "2021",
            "value": "2021",
          },
          Object {
            "displayName": "2022",
            "id": "2022",
            "label": "2022",
            "value": "2022",
          },
          Object {
            "displayName": "2023",
            "id": "2023",
            "label": "2023",
            "value": "2023",
          },
          Object {
            "displayName": "2024",
            "id": "2024",
            "label": "2024",
            "value": "2024",
          },
          Object {
            "displayName": "2025",
            "id": "2025",
            "label": "2025",
            "value": "2025",
          },
          Object {
            "displayName": "2026",
            "id": "2026",
            "label": "2026",
            "value": "2026",
          },
          Object {
            "displayName": "2027",
            "id": "2027",
            "label": "2027",
            "value": "2027",
          },
          Object {
            "displayName": "2028",
            "id": "2028",
            "label": "2028",
            "value": "2028",
          },
          Object {
            "displayName": "2029",
            "id": "2029",
            "label": "2029",
            "value": "2029",
          },
        ]
      }
      handleSubmit={[MockFunction]}
      initialValues={Object {}}
      isEdit={false}
      isPLCCEnabled={true}
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
        }
      }
      mailingAddress={true}
      onFileAddressKey=""
      pristine={true}
      selectedCard={null}
      showCreditCardFields={true}
      showCvv={false}
      showEmailAddress={true}
      showUserName={true}
      subHeading={null}
    />
    <Styled(View)>
      <Styled(Heading)
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="ls167"
        locator=""
        mobilefontFamily="secondary"
        text="lbl_payment_billingAddress"
        textAlign="left"
      />
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="black"
          margin={null}
          marginTop="10"
          numberOfLines={null}
          text="lbl_payment_ccAdressSelect"
          textAlign="left"
          textDecoration={null}
        />
      </Styled(View)>
      <Field
        addAddress={[Function]}
        component={[Function]}
        data={
          Array [
            Object {
              "content": Object {
                "addressId": "12345",
                "firstName": "test",
                "lastName": "test",
                "primary": "true",
              },
              "id": "12345",
              "label": "test test (Default)",
              "primary": true,
            },
            Object {
              "content": "",
              "id": "",
              "label": "lbl_payment_addNewAddCta",
              "primary": false,
            },
          ]
        }
        dataLocator="payment-billingaddressdd"
        dropDownStyle={
          Object {
            "borderBottomWidth": 1,
            "height": 30,
            "marginTop": 25,
          }
        }
        id="onFileAddressKey"
        itemStyle={
          Object {
            "height": 90,
          }
        }
        labels={
          Object {
            "common": Object {},
            "paymentGC": Object {},
          }
        }
        name="onFileAddressKey"
        onValueChange={[Function]}
        selectListTitle="lbl_payment_ccAdressSelect"
        selectedValue=""
        variation="secondary"
      />
      <Styled(View)
        spacingStyles="margin-top-LRG"
      >
        <FormSection
          name="address"
        >
          <AddressFields
            disableCountry={false}
            dispatch={[MockFunction]}
            formName="addEditCreditCard"
            formSection="address"
            initialValues={Object {}}
            isGuest={true}
            labels={Object {}}
            showDefaultCheckbox={false}
            showEmailAddress={true}
            showPhoneNumber={false}
            showUserName={true}
          />
        </FormSection>
      </Styled(View)>
    </Styled(View)>
    <Styled(View)>
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color=""
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={false}
        fill="BLUE"
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={[MockFunction]}
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        style={
          Object {
            "color": "white",
            "fontWeight": "normal",
            "marginTop": 48,
          }
        }
        text="lbl_common_saveCTA"
        theme={Object {}}
        url=""
      />
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color=""
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={false}
        fill="WHITE"
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={null}
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        style={
          Object {
            "border": 1,
            "color": "black",
            "fontWeight": "normal",
            "marginTop": 15,
          }
        }
        text="lbl_common_cancelCTA"
        theme={Object {}}
        url=""
      />
    </Styled(View)>
  </Styled(View)>
</ScrollViewMock>
`;

exports[`CreditCardForm component should renders correctly with address dropdown 1`] = `
<ScrollViewMock
  addressLabels={Object {}}
  addressList={
    Immutable.List [
      Object {
        "addressId": "12345",
        "firstName": "test",
        "lastName": "test",
        "primary": "true",
      },
    ]
  }
  className=""
  dispatch={[MockFunction]}
  dto={Object {}}
  expMonthOptionsMap={
    Array [
      Object {
        "displayName": "01 (Jan.)",
        "id": "1",
        "label": "01 (Jan.)",
        "value": "1",
      },
      Object {
        "displayName": "02 (Feb.)",
        "id": "2",
        "label": "02 (Feb.)",
        "value": "2",
      },
      Object {
        "displayName": "03 (Mar.)",
        "id": "3",
        "label": "03 (Mar.)",
        "value": "3",
      },
      Object {
        "displayName": "04 (Apr.)",
        "id": "4",
        "label": "04 (Apr.)",
        "value": "4",
      },
      Object {
        "displayName": "05 (May.)",
        "id": "5",
        "label": "05 (May.)",
        "value": "5",
      },
      Object {
        "displayName": "06 (Jun.)",
        "id": "6",
        "label": "06 (Jun.)",
        "value": "6",
      },
      Object {
        "displayName": "07 (Jul.)",
        "id": "7",
        "label": "07 (Jul.)",
        "value": "7",
      },
      Object {
        "displayName": "08 (Aug.)",
        "id": "8",
        "label": "08 (Aug.)",
        "value": "8",
      },
      Object {
        "displayName": "09 (Sep.)",
        "id": "9",
        "label": "09 (Sep.)",
        "value": "9",
      },
      Object {
        "displayName": "10 (Oct.)",
        "id": "10",
        "label": "10 (Oct.)",
        "value": "10",
      },
      Object {
        "displayName": "11 (Nov.)",
        "id": "11",
        "label": "11 (Nov.)",
        "value": "11",
      },
      Object {
        "displayName": "12 (Dec.)",
        "id": "12",
        "label": "12 (Dec.)",
        "value": "12",
      },
    ]
  }
  expYearOptionsMap={
    Array [
      Object {
        "displayName": "2019",
        "id": "2019",
        "label": "2019",
        "value": "2019",
      },
      Object {
        "displayName": "2020",
        "id": "2020",
        "label": "2020",
        "value": "2020",
      },
      Object {
        "displayName": "2021",
        "id": "2021",
        "label": "2021",
        "value": "2021",
      },
      Object {
        "displayName": "2022",
        "id": "2022",
        "label": "2022",
        "value": "2022",
      },
      Object {
        "displayName": "2023",
        "id": "2023",
        "label": "2023",
        "value": "2023",
      },
      Object {
        "displayName": "2024",
        "id": "2024",
        "label": "2024",
        "value": "2024",
      },
      Object {
        "displayName": "2025",
        "id": "2025",
        "label": "2025",
        "value": "2025",
      },
      Object {
        "displayName": "2026",
        "id": "2026",
        "label": "2026",
        "value": "2026",
      },
      Object {
        "displayName": "2027",
        "id": "2027",
        "label": "2027",
        "value": "2027",
      },
      Object {
        "displayName": "2028",
        "id": "2028",
        "label": "2028",
        "value": "2028",
      },
      Object {
        "displayName": "2029",
        "id": "2029",
        "label": "2029",
        "value": "2029",
      },
    ]
  }
  handleSubmit={[MockFunction]}
  initialValues={Object {}}
  isEdit={false}
  keyboardShouldPersistTaps="handled"
  labels={
    Object {
      "common": Object {},
      "paymentGC": Object {},
    }
  }
  mailingAddress={false}
  onFileAddressKey="12345"
  selectedCard={null}
  showCreditCardFields={true}
  showEmailAddress={true}
  showUserName={true}
  showsVerticalScrollIndicator={false}
  subHeading={null}
>
  <Styled(View)>
    <CreditCardFields
      addressLabels={Object {}}
      addressList={
        Immutable.List [
          Object {
            "addressId": "12345",
            "firstName": "test",
            "lastName": "test",
            "primary": "true",
          },
        ]
      }
      cameraIcon={false}
      cardType=""
      cardTypeImgUrl=""
      className=""
      creditFieldLabels={
        Object {
          "creditCardNumber": "lbl_payment_cardNumber",
          "expMonth": "lbl_payment_expMonth",
          "expYear": "lbl_payment_expYear",
        }
      }
      dispatch={[MockFunction]}
      dto={Object {}}
      expMonthOptionsMap={
        Array [
          Object {
            "displayName": "01 (Jan.)",
            "id": "1",
            "label": "01 (Jan.)",
            "value": "1",
          },
          Object {
            "displayName": "02 (Feb.)",
            "id": "2",
            "label": "02 (Feb.)",
            "value": "2",
          },
          Object {
            "displayName": "03 (Mar.)",
            "id": "3",
            "label": "03 (Mar.)",
            "value": "3",
          },
          Object {
            "displayName": "04 (Apr.)",
            "id": "4",
            "label": "04 (Apr.)",
            "value": "4",
          },
          Object {
            "displayName": "05 (May.)",
            "id": "5",
            "label": "05 (May.)",
            "value": "5",
          },
          Object {
            "displayName": "06 (Jun.)",
            "id": "6",
            "label": "06 (Jun.)",
            "value": "6",
          },
          Object {
            "displayName": "07 (Jul.)",
            "id": "7",
            "label": "07 (Jul.)",
            "value": "7",
          },
          Object {
            "displayName": "08 (Aug.)",
            "id": "8",
            "label": "08 (Aug.)",
            "value": "8",
          },
          Object {
            "displayName": "09 (Sep.)",
            "id": "9",
            "label": "09 (Sep.)",
            "value": "9",
          },
          Object {
            "displayName": "10 (Oct.)",
            "id": "10",
            "label": "10 (Oct.)",
            "value": "10",
          },
          Object {
            "displayName": "11 (Nov.)",
            "id": "11",
            "label": "11 (Nov.)",
            "value": "11",
          },
          Object {
            "displayName": "12 (Dec.)",
            "id": "12",
            "label": "12 (Dec.)",
            "value": "12",
          },
        ]
      }
      expYearOptionsMap={
        Array [
          Object {
            "displayName": "2019",
            "id": "2019",
            "label": "2019",
            "value": "2019",
          },
          Object {
            "displayName": "2020",
            "id": "2020",
            "label": "2020",
            "value": "2020",
          },
          Object {
            "displayName": "2021",
            "id": "2021",
            "label": "2021",
            "value": "2021",
          },
          Object {
            "displayName": "2022",
            "id": "2022",
            "label": "2022",
            "value": "2022",
          },
          Object {
            "displayName": "2023",
            "id": "2023",
            "label": "2023",
            "value": "2023",
          },
          Object {
            "displayName": "2024",
            "id": "2024",
            "label": "2024",
            "value": "2024",
          },
          Object {
            "displayName": "2025",
            "id": "2025",
            "label": "2025",
            "value": "2025",
          },
          Object {
            "displayName": "2026",
            "id": "2026",
            "label": "2026",
            "value": "2026",
          },
          Object {
            "displayName": "2027",
            "id": "2027",
            "label": "2027",
            "value": "2027",
          },
          Object {
            "displayName": "2028",
            "id": "2028",
            "label": "2028",
            "value": "2028",
          },
          Object {
            "displayName": "2029",
            "id": "2029",
            "label": "2029",
            "value": "2029",
          },
        ]
      }
      handleSubmit={[MockFunction]}
      initialValues={Object {}}
      isEdit={false}
      isPLCCEnabled={true}
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
        }
      }
      mailingAddress={false}
      onFileAddressKey="12345"
      selectedCard={null}
      showCreditCardFields={true}
      showCvv={false}
      showEmailAddress={true}
      showUserName={true}
      subHeading={null}
    />
    <Styled(View)>
      <Styled(Heading)
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="ls167"
        locator=""
        mobilefontFamily="secondary"
        text="lbl_payment_billingAddress"
        textAlign="left"
      />
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="black"
          margin={null}
          marginTop="10"
          numberOfLines={null}
          text="lbl_payment_ccAdressSelect"
          textAlign="left"
          textDecoration={null}
        />
      </Styled(View)>
      <Field
        addAddress={[Function]}
        component={[Function]}
        data={
          Array [
            Object {
              "content": Object {
                "addressId": "12345",
                "firstName": "test",
                "lastName": "test",
                "primary": "true",
              },
              "id": "12345",
              "label": "test test (Default)",
              "primary": true,
            },
            Object {
              "content": "",
              "id": "",
              "label": "lbl_payment_addNewAddCta",
              "primary": false,
            },
          ]
        }
        dataLocator="payment-billingaddressdd"
        dropDownStyle={
          Object {
            "borderBottomWidth": 1,
            "height": 30,
            "marginTop": 25,
          }
        }
        id="onFileAddressKey"
        itemStyle={
          Object {
            "height": 90,
          }
        }
        labels={
          Object {
            "common": Object {},
            "paymentGC": Object {},
          }
        }
        name="onFileAddressKey"
        onValueChange={[Function]}
        selectListTitle="lbl_payment_ccAdressSelect"
        selectedValue="12345"
        variation="secondary"
      />
      <Styled(View)>
        <Styled(View) />
        <Address
          address={
            Object {
              "addressId": "12345",
              "firstName": "test",
              "lastName": "test",
              "primary": "true",
            }
          }
          customStyle={
            Object {
              "fontSize": "fs14",
              "fontWeight": "regular",
            }
          }
          dataLocatorPrefix="address"
          fontSize="fs14"
          regularName={false}
          showCountry={false}
          showDefaultText={false}
          showName={true}
          showPhone={false}
        />
        <Styled(View) />
      </Styled(View)>
    </Styled(View)>
    <Styled(View)>
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color=""
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={false}
        fill="BLUE"
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={[MockFunction]}
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        style={
          Object {
            "color": "white",
            "fontWeight": "normal",
            "marginTop": 48,
          }
        }
        text="lbl_payment_addCard"
        theme={Object {}}
        url=""
      />
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color=""
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={false}
        fill="WHITE"
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={null}
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        style={
          Object {
            "border": 1,
            "color": "black",
            "fontWeight": "normal",
            "marginTop": 15,
          }
        }
        text="lbl_common_cancelCTA"
        theme={Object {}}
        url=""
      />
    </Styled(View)>
  </Styled(View)>
</ScrollViewMock>
`;

exports[`CreditCardForm component should renders correctly with addressForm 1`] = `
<ScrollViewMock
  addressLabels={Object {}}
  addressList={
    Immutable.List [
      Object {
        "addressId": "12345",
        "firstName": "test",
        "lastName": "test",
        "primary": "true",
      },
    ]
  }
  className=""
  dispatch={[MockFunction]}
  dto={Object {}}
  expMonthOptionsMap={
    Array [
      Object {
        "displayName": "01 (Jan.)",
        "id": "1",
        "label": "01 (Jan.)",
        "value": "1",
      },
      Object {
        "displayName": "02 (Feb.)",
        "id": "2",
        "label": "02 (Feb.)",
        "value": "2",
      },
      Object {
        "displayName": "03 (Mar.)",
        "id": "3",
        "label": "03 (Mar.)",
        "value": "3",
      },
      Object {
        "displayName": "04 (Apr.)",
        "id": "4",
        "label": "04 (Apr.)",
        "value": "4",
      },
      Object {
        "displayName": "05 (May.)",
        "id": "5",
        "label": "05 (May.)",
        "value": "5",
      },
      Object {
        "displayName": "06 (Jun.)",
        "id": "6",
        "label": "06 (Jun.)",
        "value": "6",
      },
      Object {
        "displayName": "07 (Jul.)",
        "id": "7",
        "label": "07 (Jul.)",
        "value": "7",
      },
      Object {
        "displayName": "08 (Aug.)",
        "id": "8",
        "label": "08 (Aug.)",
        "value": "8",
      },
      Object {
        "displayName": "09 (Sep.)",
        "id": "9",
        "label": "09 (Sep.)",
        "value": "9",
      },
      Object {
        "displayName": "10 (Oct.)",
        "id": "10",
        "label": "10 (Oct.)",
        "value": "10",
      },
      Object {
        "displayName": "11 (Nov.)",
        "id": "11",
        "label": "11 (Nov.)",
        "value": "11",
      },
      Object {
        "displayName": "12 (Dec.)",
        "id": "12",
        "label": "12 (Dec.)",
        "value": "12",
      },
    ]
  }
  expYearOptionsMap={
    Array [
      Object {
        "displayName": "2019",
        "id": "2019",
        "label": "2019",
        "value": "2019",
      },
      Object {
        "displayName": "2020",
        "id": "2020",
        "label": "2020",
        "value": "2020",
      },
      Object {
        "displayName": "2021",
        "id": "2021",
        "label": "2021",
        "value": "2021",
      },
      Object {
        "displayName": "2022",
        "id": "2022",
        "label": "2022",
        "value": "2022",
      },
      Object {
        "displayName": "2023",
        "id": "2023",
        "label": "2023",
        "value": "2023",
      },
      Object {
        "displayName": "2024",
        "id": "2024",
        "label": "2024",
        "value": "2024",
      },
      Object {
        "displayName": "2025",
        "id": "2025",
        "label": "2025",
        "value": "2025",
      },
      Object {
        "displayName": "2026",
        "id": "2026",
        "label": "2026",
        "value": "2026",
      },
      Object {
        "displayName": "2027",
        "id": "2027",
        "label": "2027",
        "value": "2027",
      },
      Object {
        "displayName": "2028",
        "id": "2028",
        "label": "2028",
        "value": "2028",
      },
      Object {
        "displayName": "2029",
        "id": "2029",
        "label": "2029",
        "value": "2029",
      },
    ]
  }
  handleSubmit={[MockFunction]}
  initialValues={Object {}}
  isEdit={false}
  keyboardShouldPersistTaps="handled"
  labels={
    Object {
      "common": Object {},
      "paymentGC": Object {},
    }
  }
  mailingAddress={false}
  onFileAddressKey=""
  pristine={true}
  selectedCard={null}
  showCreditCardFields={true}
  showEmailAddress={true}
  showUserName={true}
  showsVerticalScrollIndicator={false}
  subHeading={null}
>
  <Styled(View)>
    <CreditCardFields
      addressLabels={Object {}}
      addressList={
        Immutable.List [
          Object {
            "addressId": "12345",
            "firstName": "test",
            "lastName": "test",
            "primary": "true",
          },
        ]
      }
      cameraIcon={false}
      cardType=""
      cardTypeImgUrl=""
      className=""
      creditFieldLabels={
        Object {
          "creditCardNumber": "lbl_payment_cardNumber",
          "expMonth": "lbl_payment_expMonth",
          "expYear": "lbl_payment_expYear",
        }
      }
      dispatch={[MockFunction]}
      dto={Object {}}
      expMonthOptionsMap={
        Array [
          Object {
            "displayName": "01 (Jan.)",
            "id": "1",
            "label": "01 (Jan.)",
            "value": "1",
          },
          Object {
            "displayName": "02 (Feb.)",
            "id": "2",
            "label": "02 (Feb.)",
            "value": "2",
          },
          Object {
            "displayName": "03 (Mar.)",
            "id": "3",
            "label": "03 (Mar.)",
            "value": "3",
          },
          Object {
            "displayName": "04 (Apr.)",
            "id": "4",
            "label": "04 (Apr.)",
            "value": "4",
          },
          Object {
            "displayName": "05 (May.)",
            "id": "5",
            "label": "05 (May.)",
            "value": "5",
          },
          Object {
            "displayName": "06 (Jun.)",
            "id": "6",
            "label": "06 (Jun.)",
            "value": "6",
          },
          Object {
            "displayName": "07 (Jul.)",
            "id": "7",
            "label": "07 (Jul.)",
            "value": "7",
          },
          Object {
            "displayName": "08 (Aug.)",
            "id": "8",
            "label": "08 (Aug.)",
            "value": "8",
          },
          Object {
            "displayName": "09 (Sep.)",
            "id": "9",
            "label": "09 (Sep.)",
            "value": "9",
          },
          Object {
            "displayName": "10 (Oct.)",
            "id": "10",
            "label": "10 (Oct.)",
            "value": "10",
          },
          Object {
            "displayName": "11 (Nov.)",
            "id": "11",
            "label": "11 (Nov.)",
            "value": "11",
          },
          Object {
            "displayName": "12 (Dec.)",
            "id": "12",
            "label": "12 (Dec.)",
            "value": "12",
          },
        ]
      }
      expYearOptionsMap={
        Array [
          Object {
            "displayName": "2019",
            "id": "2019",
            "label": "2019",
            "value": "2019",
          },
          Object {
            "displayName": "2020",
            "id": "2020",
            "label": "2020",
            "value": "2020",
          },
          Object {
            "displayName": "2021",
            "id": "2021",
            "label": "2021",
            "value": "2021",
          },
          Object {
            "displayName": "2022",
            "id": "2022",
            "label": "2022",
            "value": "2022",
          },
          Object {
            "displayName": "2023",
            "id": "2023",
            "label": "2023",
            "value": "2023",
          },
          Object {
            "displayName": "2024",
            "id": "2024",
            "label": "2024",
            "value": "2024",
          },
          Object {
            "displayName": "2025",
            "id": "2025",
            "label": "2025",
            "value": "2025",
          },
          Object {
            "displayName": "2026",
            "id": "2026",
            "label": "2026",
            "value": "2026",
          },
          Object {
            "displayName": "2027",
            "id": "2027",
            "label": "2027",
            "value": "2027",
          },
          Object {
            "displayName": "2028",
            "id": "2028",
            "label": "2028",
            "value": "2028",
          },
          Object {
            "displayName": "2029",
            "id": "2029",
            "label": "2029",
            "value": "2029",
          },
        ]
      }
      handleSubmit={[MockFunction]}
      initialValues={Object {}}
      isEdit={false}
      isPLCCEnabled={true}
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
        }
      }
      mailingAddress={false}
      onFileAddressKey=""
      pristine={true}
      selectedCard={null}
      showCreditCardFields={true}
      showCvv={false}
      showEmailAddress={true}
      showUserName={true}
      subHeading={null}
    />
    <Styled(View)>
      <Styled(Heading)
        fontSize="fs14"
        fontWeight="black"
        letterSpacing="ls167"
        locator=""
        mobilefontFamily="secondary"
        text="lbl_payment_billingAddress"
        textAlign="left"
      />
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="black"
          margin={null}
          marginTop="10"
          numberOfLines={null}
          text="lbl_payment_ccAdressSelect"
          textAlign="left"
          textDecoration={null}
        />
      </Styled(View)>
      <Field
        addAddress={[Function]}
        component={[Function]}
        data={
          Array [
            Object {
              "content": Object {
                "addressId": "12345",
                "firstName": "test",
                "lastName": "test",
                "primary": "true",
              },
              "id": "12345",
              "label": "test test (Default)",
              "primary": true,
            },
            Object {
              "content": "",
              "id": "",
              "label": "lbl_payment_addNewAddCta",
              "primary": false,
            },
          ]
        }
        dataLocator="payment-billingaddressdd"
        dropDownStyle={
          Object {
            "borderBottomWidth": 1,
            "height": 30,
            "marginTop": 25,
          }
        }
        id="onFileAddressKey"
        itemStyle={
          Object {
            "height": 90,
          }
        }
        labels={
          Object {
            "common": Object {},
            "paymentGC": Object {},
          }
        }
        name="onFileAddressKey"
        onValueChange={[Function]}
        selectListTitle="lbl_payment_ccAdressSelect"
        selectedValue=""
        variation="secondary"
      />
      <Styled(View)
        spacingStyles="margin-top-LRG"
      >
        <FormSection
          name="address"
        >
          <AddressFields
            disableCountry={false}
            dispatch={[MockFunction]}
            formName="addEditCreditCard"
            formSection="address"
            initialValues={Object {}}
            isGuest={true}
            labels={Object {}}
            showDefaultCheckbox={false}
            showEmailAddress={true}
            showPhoneNumber={false}
            showUserName={true}
          />
        </FormSection>
      </Styled(View)>
    </Styled(View)>
    <Styled(View)>
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color=""
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={false}
        fill="BLUE"
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={[MockFunction]}
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        style={
          Object {
            "color": "white",
            "fontWeight": "normal",
            "marginTop": 48,
          }
        }
        text="lbl_payment_addCard"
        theme={Object {}}
        url=""
      />
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color=""
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={false}
        fill="WHITE"
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={null}
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        style={
          Object {
            "border": 1,
            "color": "black",
            "fontWeight": "normal",
            "marginTop": 15,
          }
        }
        text="lbl_common_cancelCTA"
        theme={Object {}}
        url=""
      />
    </Styled(View)>
  </Styled(View)>
</ScrollViewMock>
`;
